--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-  		<title>Rubular: a Ruby regular expression editor and tester</title>
+  		<title>Grubular: a Go regular expression editor and tester</title>
   	<meta name="keywords" content="regular expression, regex, regexp, ruby, rails, programming, development, editor, tester, builder, tool">	
     <meta name="description" content="Rubular is a Ruby-based regular expression editor and tester. It's a handy way to test regular expressions as you write them. Rubular is an especially good fit for Ruby and Rails developers, since it uses Ruby on the server to evaluate regexes, but should also be useful for those working in other programming languages and frameworks (Java, PHP, Python, Javascript, etc.)">
     <script src="/assets/application-68637a495ffd96e0688f5aa0ce5a3ad6.js" type="text/javascript"></script>
